# TG-Sticker-Finder

./: .gitignore  README.md  bot.py  config.example.json  config.py  main.py  pyproject.toml
stickers/: sticker_pack.py
stickers/providers/: __init__.py  combot.py  provider.py  tlgrm.py
