[tool.poetry]
name = "sticker-finder"
version = "0.1.0"
description = ""
authors = ["Mark <rotner.mr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.5"
dacite = "^1.8.1"
requests = "^2.31.0"
fake-useragent = "^1.2.1"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
